proyecto/grammar/.antlr/pseIntParser.java
// Generated from c:\Users\juand\OneDrive\Documentos\Interprete\AnalizadorSemantico\grammar\pseInt.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pseIntParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, CM=2, CADENA=3, CARACTER=4, ENTERO=5, LOGICO=6, NUMERICO=7, NUMERO=8, 
		REAL=9, TEXTO=10, VERDADERO=11, FALSO=12, PROCESO=13, ALGORITMO=14, FINPROCESO=15, 
		FINALGORITMO=16, SUBPROCESO=17, FUNCION=18, FINSUBPROCESO=19, FINFUNCION=20, 
		DEFINIR=21, COMO=22, LEER=23, ESCRIBIR=24, DIMENSION=25, SI=26, ENTONCES=27, 
		FINSI=28, SINO=29, PARA=30, HASTA=31, HACER=32, FINPARA=33, CON=34, PASO=35, 
		MIENTRAS=36, FINMIENTRAS=37, REPETIR=38, QUE=39, SEGUN=40, FINSEGUN=41, 
		CASO=42, DE=43, OTRO=44, MODO=45, ESPERAR=46, TECLA=47, SEGUNDOS=48, SEGUNDO=49, 
		MILISEGUNDOS=50, PANTALLA=51, BORRAR=52, LIMPIAR=53, TOKEN_PAR_IZQ=54, 
		TOKEN_PAR_DER=55, TOKEN_ENTERO=56, TOKEN_REAL=57, TOKEN_IGUAL=58, TOKEN_MAYOR_IGUAL=59, 
		TOKEN_MENOR_IGUAL=60, TOKEN_DIF=61, TOKEN_MAYOR=62, TOKEN_MENOR=63, TOKEN_O=64, 
		TOKEN_Y=65, TOKEN_NO=66, TOKEN_MOD=67, TOKEN_MAS=68, TOKEN_MENOS=69, TOKEN_MUL=70, 
		TOKEN_DIV=71, TOKEN_POT=72, TOKEN_PYC=73, TOKEN_COMA=74, TOKEN_COR_DER=75, 
		TOKEN_COR_IZQ=76, TOKEN_DOSP=77, TOKEN_ASIG=78, TOKEN_CADENA=79, ID=80;
	public static final int
		RULE_start = 0, RULE_tipo = 1, RULE_logicvalues = 2, RULE_numbervalues = 3, 
		RULE_operrel = 4, RULE_opermas = 5, RULE_opermul = 6, RULE_inicioproceso = 7, 
		RULE_finproceso = 8, RULE_iniciosubproceso = 9, RULE_finsubproceso = 10, 
		RULE_subproceso = 11, RULE_subparametros = 12, RULE_proceso = 13, RULE_comandos = 14, 
		RULE_comando = 15, RULE_definir = 16, RULE_listaGen = 17, RULE_valor = 18, 
		RULE_listaMatrix = 19, RULE_listaIds = 20, RULE_ids = 21, RULE_matrix = 22, 
		RULE_func = 23, RULE_asignar = 24, RULE_bool1 = 25, RULE_bool2 = 26, RULE_bool3 = 27, 
		RULE_bool4 = 28, RULE_arit1 = 29, RULE_arit2 = 30, RULE_arit3 = 31, RULE_arit4 = 32, 
		RULE_arit5 = 33, RULE_arit6 = 34, RULE_leer = 35, RULE_escribir = 36, 
		RULE_dimension = 37, RULE_si = 38, RULE_sino = 39, RULE_para = 40, RULE_paso = 41, 
		RULE_mientras = 42, RULE_repetir = 43, RULE_segun = 44, RULE_casos = 45, 
		RULE_otro = 46, RULE_esperar = 47, RULE_evento = 48, RULE_tiempo = 49, 
		RULE_limpiar = 50, RULE_limpieza = 51;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "tipo", "logicvalues", "numbervalues", "operrel", "opermas", 
			"opermul", "inicioproceso", "finproceso", "iniciosubproceso", "finsubproceso", 
			"subproceso", "subparametros", "proceso", "comandos", "comando", "definir", 
			"listaGen", "valor", "listaMatrix", "listaIds", "ids", "matrix", "func", 
			"asignar", "bool1", "bool2", "bool3", "bool4", "arit1", "arit2", "arit3", 
			"arit4", "arit5", "arit6", "leer", "escribir", "dimension", "si", "sino", 
			"para", "paso", "mientras", "repetir", "segun", "casos", "otro", "esperar", 
			"evento", "tiempo", "limpiar", "limpieza"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'('", "')'", null, null, "'='", 
			"'>='", "'<='", "'<>'", "'>'", "'<'", null, null, null, null, "'+'", 
			"'-'", "'*'", "'/'", "'^'", "';'", "','", "']'", "'['", "':'", "'<-'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "CM", "CADENA", "CARACTER", "ENTERO", "LOGICO", "NUMERICO", 
			"NUMERO", "REAL", "TEXTO", "VERDADERO", "FALSO", "PROCESO", "ALGORITMO", 
			"FINPROCESO", "FINALGORITMO", "SUBPROCESO", "FUNCION", "FINSUBPROCESO", 
			"FINFUNCION", "DEFINIR", "COMO", "LEER", "ESCRIBIR", "DIMENSION", "SI", 
			"ENTONCES", "FINSI", "SINO", "PARA", "HASTA", "HACER", "FINPARA", "CON", 
			"PASO", "MIENTRAS", "FINMIENTRAS", "REPETIR", "QUE", "SEGUN", "FINSEGUN", 
			"CASO", "DE", "OTRO", "MODO", "ESPERAR", "TECLA", "SEGUNDOS", "SEGUNDO", 
			"MILISEGUNDOS", "PANTALLA", "BORRAR", "LIMPIAR", "TOKEN_PAR_IZQ", "TOKEN_PAR_DER", 
			"TOKEN_ENTERO", "TOKEN_REAL", "TOKEN_IGUAL", "TOKEN_MAYOR_IGUAL", "TOKEN_MENOR_IGUAL", 
			"TOKEN_DIF", "TOKEN_MAYOR", "TOKEN_MENOR", "TOKEN_O", "TOKEN_Y", "TOKEN_NO", 
			"TOKEN_MOD", "TOKEN_MAS", "TOKEN_MENOS", "TOKEN_MUL", "TOKEN_DIV", "TOKEN_POT", 
			"TOKEN_PYC", "TOKEN_COMA", "TOKEN_COR_DER", "TOKEN_COR_IZQ", "TOKEN_DOSP", 
			"TOKEN_ASIG", "TOKEN_CADENA", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pseInt.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pseIntParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public SubprocesoContext subproceso() {
			return getRuleContext(SubprocesoContext.class,0);
		}
		public ProcesoContext proceso() {
			return getRuleContext(ProcesoContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			subproceso();
			setState(105);
			proceso();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TipoContext extends ParserRuleContext {
		public TerminalNode CADENA() { return getToken(pseIntParser.CADENA, 0); }
		public TerminalNode CARACTER() { return getToken(pseIntParser.CARACTER, 0); }
		public TerminalNode ENTERO() { return getToken(pseIntParser.ENTERO, 0); }
		public TerminalNode LOGICO() { return getToken(pseIntParser.LOGICO, 0); }
		public TerminalNode NUMERICO() { return getToken(pseIntParser.NUMERICO, 0); }
		public TerminalNode NUMERO() { return getToken(pseIntParser.NUMERO, 0); }
		public TerminalNode REAL() { return getToken(pseIntParser.REAL, 0); }
		public TerminalNode TEXTO() { return getToken(pseIntParser.TEXTO, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CADENA) | (1L << CARACTER) | (1L << ENTERO) | (1L << LOGICO) | (1L << NUMERICO) | (1L << NUMERO) | (1L << REAL) | (1L << TEXTO))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicvaluesContext extends ParserRuleContext {
		public TerminalNode VERDADERO() { return getToken(pseIntParser.VERDADERO, 0); }
		public TerminalNode FALSO() { return getToken(pseIntParser.FALSO, 0); }
		public LogicvaluesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicvalues; }
	}

	public final LogicvaluesContext logicvalues() throws RecognitionException {
		LogicvaluesContext _localctx = new LogicvaluesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_logicvalues);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if ( !(_la==VERDADERO || _la==FALSO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumbervaluesContext extends ParserRuleContext {
		public TerminalNode TOKEN_ENTERO() { return getToken(pseIntParser.TOKEN_ENTERO, 0); }
		public TerminalNode TOKEN_REAL() { return getToken(pseIntParser.TOKEN_REAL, 0); }
		public NumbervaluesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numbervalues; }
	}

	public final NumbervaluesContext numbervalues() throws RecognitionException {
		NumbervaluesContext _localctx = new NumbervaluesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numbervalues);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_la = _input.LA(1);
			if ( !(_la==TOKEN_ENTERO || _la==TOKEN_REAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperrelContext extends ParserRuleContext {
		public TerminalNode TOKEN_IGUAL() { return getToken(pseIntParser.TOKEN_IGUAL, 0); }
		public TerminalNode TOKEN_DIF() { return getToken(pseIntParser.TOKEN_DIF, 0); }
		public TerminalNode TOKEN_MAYOR() { return getToken(pseIntParser.TOKEN_MAYOR, 0); }
		public TerminalNode TOKEN_MENOR() { return getToken(pseIntParser.TOKEN_MENOR, 0); }
		public TerminalNode TOKEN_MAYOR_IGUAL() { return getToken(pseIntParser.TOKEN_MAYOR_IGUAL, 0); }
		public TerminalNode TOKEN_MENOR_IGUAL() { return getToken(pseIntParser.TOKEN_MENOR_IGUAL, 0); }
		public OperrelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operrel; }
	}

	public final OperrelContext operrel() throws RecognitionException {
		OperrelContext _localctx = new OperrelContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_operrel);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TOKEN_IGUAL) | (1L << TOKEN_MAYOR_IGUAL) | (1L << TOKEN_MENOR_IGUAL) | (1L << TOKEN_DIF) | (1L << TOKEN_MAYOR) | (1L << TOKEN_MENOR))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OpermasContext extends ParserRuleContext {
		public TerminalNode TOKEN_MAS() { return getToken(pseIntParser.TOKEN_MAS, 0); }
		public TerminalNode TOKEN_MENOS() { return getToken(pseIntParser.TOKEN_MENOS, 0); }
		public OpermasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opermas; }
	}

	public final OpermasContext opermas() throws RecognitionException {
		OpermasContext _localctx = new OpermasContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_opermas);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_la = _input.LA(1);
			if ( !(_la==TOKEN_MAS || _la==TOKEN_MENOS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
